added swagger sensors_devices
